refactor code, change OffsetDateTime to LocalDateTime, delete builder() from generated models, add restrictions